--- a/V2LibAlann/index.html
+++ b/V2LibAlann/index.html
@@ -9,14 +9,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+<!-- Game is running here     -->
 </body>
 <script src="KeyManager.js"></script>
+<script src="UserInterface.js"></script>
+<script src="CoolDown.js"></script>
 <script src="Alien.js"></script>
 <script src="Bullet.js"></script>
 <script src="PlayerShip.js"></script>
 <script src="GameObject.js"></script>
 <script src="PlayGround.js"></script>
 <script src="GameEngine.js"></script>
-<script src="testAllClass.js"></script>
+<!-- <script src="testUI.js"></script> -->
+<script src="testINvadersProto.js"></script>
 </html>
