--- a/spaceinvaders.html
+++ b/spaceinvaders.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
     <meta name="viewport" content="user-scalable=no" />
+    <link rel="stylesheet" href="./static/reset.css" type="text/css" />
     <link rel="stylesheet" href="./static/style.css" type="text/css" media="screen" />
+
     <title>SpaceInvaders</title>
 </head>
 <body>
